webauth (3.3.0-1) unstable; urgency=low

  * New upstream release.
    - S/Ident support removed.
    - New WebAuthLdapSeparator configuration setting for multi-valued
      attribute handling.
    - libwebauth now uses symbol versioning.
  * Update copyright to my current format and add an explicit packaging
    copyright and license statement.
  * Indent the homepage in package descriptions to avoid wrapping.
  * Update standards version to 3.6.2 (no changes required).

 --

webauth (3.2.8-1) unstable; urgency=low

  * New upstream release.
    - mod_webauth now handles empty keyring files appropriately.
    - Significant improvements to the mod_webkdc manual.

 -- Russ Allbery <rra@stanford.edu>  Thu,  2 Jun 2005 23:21:02 -0700

webauth (3.2.7-1) unstable; urgency=low

  * New upstream release.
    - Update libtool to 1.5.6 for better shared library support on MIPS.
      Thanks, Ryan Murray.  (Closes: #306027)
    - Better diagnose a missing service token on a weblogin request.

 -- Russ Allbery <rra@stanford.edu>  Sat, 23 Apr 2005 14:33:20 -0700

webauth (3.2.6-1) unstable; urgency=low

  * Uploaded to Debian.  (Closes: #304728)
  * New upstream release.
    - Renamed the WebAuth3 Perl bindings to WebAuth.
    - Renamed the libwebauth3-perl package to libwebauth-perl accordingly.
  * Add dependency on libwebauth-perl to webauth-weblogin.  libwebkdc-perl
    will also pull it in, but this is more completely correct.
  * Add watch file.

 -- Russ Allbery <rra@stanford.edu>  Mon, 18 Apr 2005 23:06:23 -0700

webauth (3.2.5-1) unstable; urgency=low

  * New upstream release.
    - Removed debian directory from upstream tarball.
    - Report information from mod_webauthldap at saner message levels.
  * Fix package sections and formatting of the homepage link.
  * Use CFLAGS for the Perl module builds rather than hard-coding flags.
  * Change the README.Debian files to follow the Apache 2.x package
    recommendations for where to put local configuration.